[package]
name = "muscle_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tracehash = { package = "tracehash-rs", version = "0.2.0", optional = true }

[features]
default = []
cli-bin = []
tracehash = ["dep:tracehash"]

[[bin]]
name = "muscle_rs"
path = "src/main.rs"
required-features = ["cli-bin"]

[profile.release]
# Whole-program LTO and a single codegen unit let LLVM inline across the
# many small functions in the HMM/sparse-mx hot paths. Verified to keep
# byte-equality with C++ on the parity suite; trims a few percent off
# wall-clock at the cost of slower builds.
lto = "fat"
codegen-units = 1
